--- a/de/trans/impressum.dita
+++ b/de/trans/impressum.dita
@@ -109,31 +109,33 @@ der Seiten. Eine Vervielfältigung oder Verwendung solcher Grafiken, Tondokument
 Texte in anderen elektronischen oder gedruckten Publikationen ist ohne ausdrückliche Zustimmung des
 Autors nicht gestattet.</p>
 <p><b>Datenschutz</b></p>
-<p>Die Herzog August Bibliothek nutzt im Rahmen ihrer Teilnahme an der Deutschen
-Bibliotheksstatistik ein Verfahren zur Zählung der Besuche auf ihrer Internetseite. Beim Aufruf der
-Homepage und/oder der Katalogseite ("OPAC") werden eine Kennung der Bibliothek und der betreffenden
-Seite, der Zeitpunkt des Aufrufs und eine Signatur des aufrufenden Rechners gespeichert. Die
-Signatur wird mittels einer Einwegfunktion aus IP-Adresse, Browserkennung und Proxy-Information
-gebildet. Die Erhebung, Speicherung und Auswertung dieser Daten erfolgt in pseudonymisierter Form,
-d.h. die Signatur ist nicht bestimmten Personen zuzuordnen. Eine Speicherung insbesondere der
-IP-Adresse findet nicht statt. Die pseudonymen Einzeldaten werden nach spätestens 24 Stunden
-aufsummiert und damit anonymisiert.</p>
-<p> Die gespeicherten Daten werden statistisch ausgewertet, um unsere Internetseite bedarfsgerecht
-zu gestalten und weiterzuentwickeln. Die Daten werden nur zu diesem Zweck genutzt und im Anschluss
-an die Auswertung gelöscht.</p>
-<p> Mit der technischen und organisatorischen Umsetzung des Verfahrens ist die Hochschule der Medien
-Stuttgart beauftragt. Sie hat das Verfahren nach den Maßgaben der gesetzlichen Bestimmungen der
-Datenschutzgesetze und des Telemediengesetzes (TMG) entwickelt und sich zu deren Einhaltung
-verpflichtet.</p>
-<p>Sie haben die Möglichkeit, der Erhebung, Verarbeitung und Nutzung der vorbezeichneten Daten
-Ihrer Besuche zu dem genannten Zweck zu widersprechen. Klicken Sie dazu bitte auf den folgenden
-externen [<xref href="http://dbspixel.hbz-nrw.de/widerspruch.html" format="html" scope="external"
->Link</xref>].</p>
-<p>Sofern innerhalb des Internetangebotes die Möglichkeit zur Eingabe persönlicher oder
-geschäftlicher Daten (Emailadressen, Namen, Anschriften) besteht, so erfolgt die Preisgabe dieser
-Daten seitens des Nutzers auf ausdrücklich freiwilliger Basis. Die Inanspruchnahme und Bezahlung
-aller angebotenen Dienste ist - soweit technisch möglich und zumutbar - auch ohne Angabe solcher
-Daten bzw. unter Angabe anonymisierter Daten oder eines Pseudonyms gestattet.</p>
+      <p>Die Nutzung unserer Webseite ist in der Regel ohne Angabe personenbezogener Daten möglich.
+        Soweit auf unseren Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder
+        eMail-Adressen) erhoben werden, erfolgt dies, soweit möglich, stets auf freiwilliger Basis.
+        Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht an Dritte weitergegeben. Wir
+        weisen darauf hin, dass die Datenübertragung im Internet (z. B. bei der Kommunikation per
+        E-Mail) Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff
+        durch Dritte ist nicht möglich. Der Nutzung von im Rahmen der Impressumspflicht
+        veröffentlichten Kontaktdaten durch Dritte zur Übersendung von nicht ausdrücklich
+        angeforderter Werbung und Informationsmaterialien wird hiermit ausdrücklich widersprochen.
+        Die Betreiber der Seiten behalten sich ausdrücklich rechtliche Schritte im Falle der
+        unverlangten Zusendung von Werbeinformationen, etwa durch Spam-Mails, vor.</p>
+      <p>Wir verwenden Google Programmable Search Engine als Suchdienst auf der Website. Der
+        eingebundene Suchdienst ermöglicht eine Volltextsuche auf ocr-d.de.</p>
+      <p>Bei der Nutzung des Suchdienstes werden Daten an Google übertragen. Dazu gehören z.B. die
+        von Ihnen eingegebenen Suchbegriffe und die IP-Adresse des von Ihnen benutzten Gerätes.
+        Zudem können bei Nutzung des Dienstes Cookies gespeichert werden, was Sie über Ihre
+        Browsereinstellungen verhindern können. Mit der Benutzung der Volltext-Suche stimmen Sie der
+        Nutzung des Google-Suchdienstes und damit auch der Übertragung von Daten an den
+        Google-Service sowie ggf. der Speicherung von Cookies zu. Sofern Sie gleichzeitig bei Google
+        eingeloggt sind, kann Google zudem die Informationen unmittelbar Ihrem Nutzerprofil
+        zuordnen. Sie können sich ausloggen, um eine Sammlung von Profilinformationen über Sie zu
+        vermeiden. Wir weisen ausdrücklich darauf hin, dass die Verarbeitung, insbesondere die
+        Speicherung, Nutzung und Löschung von möglicherweise übertragenen personenbezogenen Daten
+        dem Anbieter des Suchdienstes obliegt.</p>
+      <p>Die Datenschutzerklärung von Google finden Sie unter: <xref
+          href="http://www.google.com/intl/de/policies/privacy" format="html" scope="external"
+          >http://www.google.com/intl/de/policies/privacy</xref></p>
 <p><b>Rechtswirksamkeit dieses Haftungsausschlusses</b></p>
 <p>Dieser Haftungsausschluss ist als Teil des Internetangebotes zu betrachten, von dem aus auf diese
 Seite verwiesen wurde. Sofern Teile oder einzelne Formulierungen dieses Textes der geltenden
