--- a/de/trans/level_1_6.dita
+++ b/de/trans/level_1_6.dita
@@ -5,7 +5,7 @@
     <body>
 <p>Das <b>runde-r</b> wird entsprechend seiner Bedeutung wiedergeben, so als heute gebräuchliches
 <tt>r</tt> oder als <tt>et</tt>-Substituent in Abkürzungen für <tt>et cetera</tt>. </p>
-<table id="table_g2c_2wp_mbb">
+<table id="table_g2c_2wp_mbb" outputclass="guidelines">
 <title>Beispiel (rundes r als heutiges <tt>r</tt> und als <tt>et</tt>):</title>
 <tgroup cols="2">
 <thead>
