--- a/de/trans/index.dita
+++ b/de/trans/index.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="index">
-    <title>Die Ground-Truth-Guidelines</title>
+    <title>Die Ground Truth Richtlinien</title>
     <body>
         <p>Der Einsatz von Referenzdaten für Training und Auswertung statistischer Annotations- und
             Analyseverfahren ist ein Kernmerkmal empirischer Forschung. Die wichtigste Grundlage für
@@ -15,7 +15,7 @@
             Normierung kann der Ground-Truth technisch validiert werden. Darüber hinaus können
             vorhandene Transkriptionen auf Grundlage dieses Regelwerkes überprüft und gegebenfalls
             in Ground-Truth-Daten umgewandelt werden.</p>
-        <p> Das Datenformat des OCR-D-Ground-Truth ist PAGE-XML. Dieses Format wurde initial durch
+        <p>Das Datenformat des OCR-D-Ground-Truth ist PAGE-XML. Dieses Format wurde initial durch
             das PRImA Research Lab an der Universität Salford Greater Manchester entwickelt und
             innerhalb des EU-Projektes IMPACT grundlegend erweitert. Zurzeit wird es vom PRImA
             Research Lab betreut. Um eine Weiterentwicklung und Pflege dieses Formates zu
@@ -24,10 +24,11 @@
 
     </body>
     <related-links><linklist outputclass="linklist_index"><title>Die Guidelines gliedern sich in folgende Bereiche:</title>
+        <link href="trLevels.dita"/>        
         <link href="transkription.dita"/>
-        <link href="trLevels.dita"/>
         <link href="layout.dita"/>
         <link href="structur_gt.dita"/>
+        <link href="trLabeling.dita"/>
         <link href="trPage.dita"/>
         <link href="page_xml_erweiterungen.dita"/></linklist>
     </related-links>
