--- a/de/trans/level_3_1.dita
+++ b/de/trans/level_3_1.dita
@@ -3,12 +3,11 @@
 <topic id="level_3_1">
     <title>Level 3</title>
     <body>
-        <p>Eine <b>Interpretation</b> von <b>Graphen</b> wird <b>vollständig unterlassen</b>. Der
-            Graph wird als ein Codepoint unter Nutzung von <b>standardisierten Kodierungen</b>
-                (Unicode),<b> communitynormierten Kodierungen</b> (MUFI) und durch das
-            Koordinierungsgremium <b>festgelegten Kodierungen</b> abgebildet. Eine
-                <b>Kombination</b> von mehreren Kodierungen zu einem Graphen erfolgt
-            <b>nicht</b>.</p>
+        <p>Eine <b>Interpretation</b> von Graphen wird <b>vollständig unterlassen</b>. Der Graph
+            wird als ein Codepoint unter Nutzung von standardisierten Kodierungen (Unicode),
+            communitynormierten Kodierungen (MUFI) und durch das Koordinierungsgremium festgelegten
+            Kodierungen abgebildet. Eine Kombination von mehreren Kodierungen zu einem Graphen
+            erfolgt nicht.</p>
         <p>Die Wiedergabe von Leerzeichen beschränkt sich darauf, dass diese ausschließlich Wörter
             von einander trennen.</p>
 
