--- a/de/trans/ly_level_2_5.dita
+++ b/de/trans/ly_level_2_5.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="level_2_5">
-    <title>Level 2</title>
+    <title>Level 2 und Level 3</title>
     <body>
         
 <p dir="ltr">Die maximale Erfassung des Ground-Truth beinhaltet alle zur Verfügung stehenden
