--- a/de/trans/trBeispiele.dita
+++ b/de/trans/trBeispiele.dita
@@ -2,20 +2,25 @@
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="Uebersichten">
   <title>Übersichten und Beispiele</title>
-<shortdesc>Die angeführten Übersichten von Alphabeten, Kürzungs-, Sonderzeichen und Ligaturen sollen als
-Beispiele und der Identifikation von einzelnen Zeichen dienen.</shortdesc>
+<shortdesc>Übersichten von Alphabeten, Kürzungs-, Sonderzeichen und Ligaturen.</shortdesc>
 <body>
-<p>Die angeführten Übersichten von Alphabeten, Kürzungs-, Sonderzeichen und Ligaturen sollen als
-Beispiele und der Identifikation von einzelnen Zeichen dienen.</p>
+<p>Die angeführten Übersichten von Alphabeten, Kürzungs-, Sonderzeichen und Ligaturen haben nicht
+      den Anspruch auf Vollständigkeit. Sondern sind als Beispiele, Vorlagen und der Identifikation
+      von einzelnen Zeichen zu nutzen.</p>
 <p>Wenn ein Schriftzeichen oder Zeichen nicht vom Unicode-Konsortium definiert wurde aber dieses
-Schriftzeichen oder Zeichen im Rahmen der <b>M</b>edieval <b>U</b>nicode <b>F</b>ont
-<b>I</b>nitiative (MUFI) als festgelegter Code-Point innerhalb der Privat-Use-Area (PUA) festgelegt
-wurde, ist ausschließlich die sogenannte Mufi-Entity für die Transkription zu verwenden. </p>
-<p>Für die Transkription von Ligaturen gelten die hier festgelegten Regeln.</p>
+      Schriftzeichen oder Zeichen im Rahmen der <b>M</b>edieval <b>U</b>nicode <b>F</b>ont
+      <b>I</b>nitiative (MUFI) als festgelegter Code-Point innerhalb der Privat-Use-Area (PUA)
+      festgelegt wurde, ist ausschließlich die Mufi-Empfehlung für die Transkription zu verwenden. </p>
 </body>
 <related-links>
+  <linklist><title>Hinweise zu Ligaturen</title>
+      <link href="trLigatur.dita#trLigatur/Ligaturen"/>
+      <link href="tr_level_1.dita"/>
+    <link href="tr_level_2.dita"/>
+    <link href="tr_level_3.dita"/></linklist>  
 <linklist><title>Medieval Unicode Font Initiative</title><link href="http://folk.uib.no/hnooh/mufi/" format="html" scope="external"/></linklist>
 <linklist><title>MUFI character recommendation v. 4.0 </title><link href="http://hdl.handle.net/1956/10699" format="html" scope="external"/>
 </linklist>
+    
 </related-links>
 </topic>
