--- a/de/trans/trBruch.dita
+++ b/de/trans/trBruch.dita
@@ -18,7 +18,7 @@
         <title>Eigenständige Brüche (ein Zeichen)</title>
         <p>Brüche werden, sofern vorhanden, mittels ihrer entsprechenden Kodierungen oder Zeichen
             wiedergegeben: </p>
-        <table id="table_qcm_f3d_b1b">
+        <table id="table_qcm_f3d_b1b" frame="all">
             <tgroup cols="1">
                     <thead>
                         <row>
