--- a/de/trans/tr_level_1.dita
+++ b/de/trans/tr_level_1.dita
@@ -9,7 +9,7 @@ ll, mm, nn, st, ch, ck, ct, th, tt, tz, kk, Qu, ſi, ſſ, ﬅ, ſch sind grunds
 eine Dokumentation über das Vorhandensein einer Ligatur wird verzichtet. </p>
 <p>Vokalische Ligaturen werden grundsätzlich realisiert:</p>
         
-        <table id="table_svl_4vt_l1b">
+        <table id="table_svl_4vt_l1b" frame="all">
             <tgroup cols="3">
                 <colspec colnum="1" colname="c1" colwidth="2.48*"/>
                 <colspec colnum="2" colname="c2" colwidth="1*"/>
