--- a/de/trans/tr_level_2.dita
+++ b/de/trans/tr_level_2.dita
@@ -10,18 +10,18 @@ ll, mm, nn, st, ch, ck, ct, th, tt, tz, kk, Qu, ſi, ſſ, ﬅ, ſch sind grunds
 href="lyTypographie.dita#lyTypographie">typographische Besonderheiten</xref> betrachtet und als
 diese gekennzeichnet.</p>
 <p>Vokalische Ligaturen werden grundsätzlich als ein Zeichen realisiert:</p>
-<table id="table_svl_4vt_l1b">
-<tgroup cols="4">
+        <table id="table_svl_4vt_l1b" outputclass="guidelines">
+<tgroup cols="3">
 <colspec colnum="1" colname="c1" colwidth="2.48*"/>
 <colspec colnum="2" colname="c2" colwidth="1*"/>
 <colspec colnum="3" colname="c3" colwidth="1.2*"/>
-<colspec colnum="4" colname="c4" colwidth="3.32*"/>
+
 <thead>
 <row>
 <entry>Vorlage</entry>
 <entry>Zeichen</entry>
-<entry>Entität</entry>
 <entry>Beschreibung</entry>
+
 </row>
 </thead>
 <tbody>
@@ -29,33 +29,33 @@ diese gekennzeichnet.</p>
 <entry><image href="images/ae.jpg" id="image_tvl_4vt_l1b">
 <alt>ae-Ligatur</alt>
 </image></entry>
-<entry>æ</entry>
-<entry><codeph>U+00E6</codeph></entry>
-<entry><codeph>LATIN SMALL LETTER AE</codeph></entry>
+    <entry>æ<term><text>hex: &amp;#x00E6;</text></term></entry>
+
+<entry>LATIN SMALL LETTER AE</entry>
 </row>
 <row>
 <entry><image href="images/oe.jpg" id="image_uvl_4vt_l1b">
 <alt>oe-Ligatur</alt>
 </image></entry>
-<entry>œ</entry>
-<entry><codeph>U+0153</codeph></entry>
-<entry><codeph>LATIN SMALL LIGATURE OE</codeph></entry>
+    <entry>œ<term><text>hex: &amp;#x0153;</text></term></entry>
+
+<entry>LATIN SMALL LIGATURE OE</entry>
 </row>
 <row>
 <entry><image href="images/AE.png" id="image_iyz_nfh_f1b">
 <alt>AE-Ligatur</alt>
 </image></entry>
-<entry>Æ</entry>
-<entry><codeph>U+00C6</codeph></entry>
-<entry><codeph>LATIN CAPITAL LETTER AE</codeph></entry>
+    <entry>Æ<term><text>hex: &amp;#x00C6;</text></term></entry>
+
+<entry>LATIN CAPITAL LETTER AE</entry>
 </row>
 <row>
 <entry><image href="images/OE.png" id="image_jlm_pjh_f1b">
 <alt>OE-Ligatur</alt>
 </image></entry>
-<entry>Œ</entry>
-<entry><codeph>U+0152</codeph></entry>
-<entry><codeph>LATIN CAPITAL LIGATURE OE</codeph></entry>
+    <entry>Œ<term><text>hex: &amp;#x0152;</text></term></entry>
+
+<entry>LATIN CAPITAL LIGATURE OE</entry>
 </row>
 </tbody>
 </tgroup>
