--- a/de/trans/tr_nasal_level_1.dita
+++ b/de/trans/tr_nasal_level_1.dita
@@ -5,7 +5,7 @@
     <body>
         <p>Kürzungsstriche, die als Balken oder geschlängelte Linie über Buchstaben stehen und als
 Substituenten für ausgelassene Zeichen stehen, sind bei Transkription aufzulösen. </p>
-    <table>
+        <table outputclass="guidelines">
     <tgroup cols="2">
     <thead>
     <row>
@@ -16,11 +16,11 @@ Substituenten für ausgelassene Zeichen stehen, sind bei Transkription aufzulös
     <tbody>
     <row>
     <entry><image href="images/frommen.jpg"/></entry>
-    <entry><codeph>frommen</codeph></entry>
+    <entry>frommen</entry>
     </row>
     <row>
     <entry><image href="images/und_macht.jpg"/></entry>
-    <entry><codeph>Und macht</codeph></entry>
+    <entry>Und macht</entry>
     </row>
     </tbody>
     </tgroup>
