--- a/de/trans/tr_nasal_level_3.dita
+++ b/de/trans/tr_nasal_level_3.dita
@@ -9,7 +9,7 @@
             durch das Koordinierungsgremium festgelegte OCR-D-Code-Definition in Nachnutzung
             gemeinsam getroffener Vereinbarungen internationaler Großprojekte wie IMPACT, EEBO, ECCO
             abgebildet. Eine Kombination von mehreren Kodierungen zu einem Zeichen erfolgt
-            nicht.</p><table>
+            nicht.</p><table outputclass="guidelines">
 <tgroup cols="2">
 <thead>
 <row>
@@ -20,11 +20,11 @@
 <tbody>
 <row>
 <entry><image href="images/frommen.jpg"/></entry>
-<entry><codeph>fro&amp;#xF519;en</codeph></entry>
+<entry>fro&#xF519;en</entry>
 </row>
                     <row>
                         <entry><image href="images/und_macht.jpg" id="image_pxn_fcb_pbb"/></entry>
-                        <entry><codeph>U&amp;#x00F1; macht</codeph></entry>
+                        <entry>U&#x00F1; macht</entry>
                     </row>
 </tbody>
 </tgroup>
