--- a/de/trans/transkription.dita
+++ b/de/trans/transkription.dita
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="transkription">
-  <title>Richtlinien zur Transkription für Ground Truth</title>
-  <titlealts><navtitle>Transkription</navtitle></titlealts>
+  <title>📑 Transkription</title>
+ 
     <abstract>
-<shortdesc>Richtlinien zur Transkription der Volltexte für die Nutzung als Ground Truth</shortdesc>
+<shortdesc>Richtlinien zur Transkription der Volltexte für die Nutzung als Ground Truth.</shortdesc>
 </abstract>
   <body>
 <p>Das OCR-D Ground-Truth-Korpus umfasst Publikationen aus dem Zeitraum 1500 - 1900. Der Inhalt des
